@@ -1,5 +1,13 @@
 2007-08-13  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: src/kahua/protocol/http.scm, src/kahua/protocol/worker.scm,
+	          src/kahua/server.scm
+	  Procedures path->path-info, path-info->abs-path, normalize-path,
+	  rel-path-info are moved from kahua.protocol.http to
+	  kahua.protocol.worker module,  and simplify-path-info is out
+	  of path->path-info and exported.  So kahua-self-uri is use
+	  simplify-path-info instead of simplify-path(of file.util).
+
 	* Change: src/kahua/server.scm
 	  Revert the change at 2007-08-10(r3001), and only delete
 	  x-kahua-metavariables.
